# tinyb

./: .classpath  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Doxyfile.cpp.in  Doxyfile.java.in  README  README.md  TROUBLESHOOTING.md
api/: tinyb.hpp
api/direct_bt/: ATTPDUTypes.hpp  BTAddress.hpp  BTIoctl.hpp  BTTypes.hpp  BasicAlgos.hpp  BasicTypes.hpp  ClassFunction.hpp  DBTAdapter.hpp  DBTDevice.hpp  DBTEnv.hpp  DBTManager.hpp  DBTTypes.hpp  DirectBT.hpp  FunctionDef.hpp  GATTCharacteristic.hpp  GATTDescriptor.hpp  GATTHandler.hpp  GATTNumbers.hpp  GATTService.hpp  GATTTypes.hpp  HCIComm.hpp  HCIHandler.hpp  HCIIoctl.hpp  HCITypes.hpp  JavaUplink.hpp  L2CAPComm.hpp  L2CAPIoctl.hpp  LFRingbuffer.hpp  MgmtComm.hpp  MgmtTypes.hpp  UUID.hpp  (+5 more)
examples/: CMakeLists.txt  HCIScanner.cpp  asynctinyb.cpp  checkinit.cpp  esstinyb.cpp  hellotinyb.cpp  list_mfg.cpp  uuid.cpp
examples/direct_bt_scanner/: dbt_scanner.cpp
examples/direct_bt_scanner00/: dbt_scanner00.cpp
examples/direct_bt_scanner01/: dbt_scanner01.cpp
examples/direct_bt_scanner10/: dbt_scanner10.cpp
examples/java/: AsyncTinyB.java  CMakeLists.txt  HelloTinyB.java  Hellotinyb.java  Notification.java  ScannerTinyB.java  ScannerTinyB00.java  ScannerTinyB01.java  ScannerTinyB02.java  ScannerTinyB10.java
examples/tinyb/: TinyBTest01.cpp  asynctinyb.cpp  checkinit.cpp  esstinyb.cpp  list_mfg.cpp  notifications.cpp  uuid.cpp
include/: BluetoothAdapter.hpp  BluetoothDevice.hpp  BluetoothEvent.hpp  BluetoothGattCharacteristic.hpp  BluetoothGattDescriptor.hpp  BluetoothGattService.hpp  BluetoothManager.hpp  BluetoothNotificationHandler.hpp  BluetoothObject.hpp  generated-code.h  tinyb_utils.hpp  version.h
java/: BluetoothAdapter.java  BluetoothCallback.java  BluetoothDevice.java  BluetoothEvent.java  BluetoothException.java  BluetoothGattCharacteristic.java  BluetoothGattDescriptor.java  BluetoothGattService.java  BluetoothManager.java  BluetoothNotification.java  BluetoothObject.java  BluetoothType.java  CMakeLists.txt  ObjectArgCallback.java  ObjectArrayArgCallback.java  TransportType.java  manifest.txt.in
java/direct_bt/tinyb/: Adapter.java  DBTAdapter.java  DBTDevice.java  DBTEvent.java  DBTGattCharacteristic.java  DBTGattDescriptor.java  DBTGattService.java  DBTManager.java  DBTNativeDownlink.java  DBTObject.java  Device.java  GattCharacteristic.java  GattDescriptor.java  GattService.java  Manager.java  NativeDownlink.java
java/jni/: BluetoothAdapter.cxx  BluetoothAdapter.h  BluetoothCallback.h  BluetoothDevice.cxx  BluetoothDevice.h  BluetoothEvent.cxx  BluetoothEvent.h  BluetoothFactory.cxx  BluetoothGattCharacteristic.cxx  BluetoothGattCharacteristic.h  BluetoothGattDescriptor.cxx  BluetoothGattDescriptor.h  BluetoothGattService.cxx  BluetoothGattService.h  BluetoothManager.cxx  BluetoothManager.h  BluetoothObject.cxx  BluetoothObject.h  BluetoothType.h  BluetoothUtils.cxx  CMakeLists.txt  DBusAdapter.cxx  DBusDevice.cxx  DBusGattCharacteristic.cxx  DBusGattDescriptor.cxx  DBusGattService.cxx  DBusManager.cxx  DBusObject.cxx  HCIAdapter.cxx  HCIDevice.cxx  HCIEvent.cxx  HCIGattCharacteristic.cxx  HCIGattDescriptor.cxx  HCIGattService.cxx  HCIManager.cxx  HCIObject.cxx  JNIMem.cxx  JNIMem.hpp  ObjectArgCallback.h  ObjectArrayArgCallback.h  (+7 more)
java/jni/direct_bt/: CMakeLists.txt  DBTAdapter.cxx  DBTDevice.cxx  DBTEvent.cxx  DBTGattCharacteristic.cxx  DBTGattDescriptor.cxx  DBTGattService.cxx  DBTManager.cxx  DBTNativeDownlink.cxx  DBTObject.cxx  DBTUtils.cxx  helper_dbt.cxx  helper_dbt.hpp
java/jni/tinyb/: CMakeLists.txt  DBusAdapter.cxx  DBusDevice.cxx  DBusEvent.cxx  DBusGattCharacteristic.cxx  DBusGattDescriptor.cxx  DBusGattService.cxx  DBusManager.cxx  DBusObject.cxx  helper_tinyb.cxx  helper_tinyb.hpp
java/org/tinyb/: AdapterSettings.java  AdapterStatusListener.java  BLERandomAddressType.java  BTMode.java  BluetoothAdapter.java  BluetoothAdapterStatusListener.java  BluetoothAddressType.java  BluetoothCallback.java  BluetoothDevice.java  BluetoothDeviceDiscoveryListener.java  BluetoothDeviceStatusListener.java  BluetoothEvent.java  BluetoothException.java  BluetoothFactory.java  BluetoothGattCharacteristic.java  BluetoothGattDescriptor.java  BluetoothGattService.java  BluetoothManager.java  BluetoothNotification.java  BluetoothObject.java  BluetoothType.java  BluetoothUtils.java  EIRDataType.java  EIRDataTypeSet.java  GATTCharacteristicListener.java  HCIErrorCode.java  HCIStatusCode.java  HCIWhitelistConnectType.java  ObjectArgCallback.java  ObjectArrayArgCallback.java  PlatformToolkit.java  TransportType.java
java/tinyb/: BluetoothCallback.java  BluetoothEvent.java  BluetoothException.java  BluetoothManager.java  ObjectArrayArgCallback.java
java/tinyb/dbus/: DBusAdapter.java  DBusBluetoothException.java  DBusDevice.java  DBusEvent.java  DBusGattCharacteristic.java  DBusGattDescriptor.java  DBusGattService.java  DBusManager.java  DBusObject.java
java/tinyb/hci/: HCIAdapter.java  HCIDevice.java  HCIEvent.java  HCIGattCharacteristic.java  HCIGattDescriptor.java  HCIGattService.java  HCIManager.java  HCIObject.java
scripts/: build-armhf.sh  build-x86_64.sh  build.sh  clangppone.sh  rebuild-armhf.sh  rebuild-x86_64.sh  rebuild.sh  run-dbt_scanner.sh  run-dbt_scanner00.sh  run-dbt_scanner01.sh  run-dbt_scanner10.sh  run-hci_scanner.sh  run-java-scanner.sh  run-java-scanner00.sh  run-java-scanner01.sh  run-java-scanner02.sh  run-java-scanner10.sh  setup-machine-arch.sh  sloccount.sh  start.bluetoothd.sh  stop.bluetoothd.sh
src/: BluetoothAdapter.cpp  BluetoothDevice.cpp  BluetoothEvent.cpp  BluetoothGattCharacteristic.cpp  BluetoothGattDescriptor.cpp  BluetoothGattService.cpp  BluetoothManager.cpp  BluetoothObject.cpp  BluetoothUUID.cpp  CMakeLists.txt  generated-code.c  org.bluez.xml  tinyb.pc.cmake  tinyb_utils.cpp
test/direct_bt/: CMakeLists.txt  README.txt  test_attpdu01.cpp  test_basictypes01.cpp  test_functiondef01.cpp  test_lfringbuffer01.cpp  test_lfringbuffer11.cpp  test_uuid.cpp
test/ieee11073/: CMakeLists.txt  test_datatypes01.cpp
(+68 files in other folders)
